1.19
* Send token and cookie to authenticate to websocket as well

1.18
* Once leaving a thread, you won't get autojoined every new message
* Leaving a channel but not a thread leaves the threads working
* Can now automatically rejoin channels/threads when mentioned directly

1.17
* Improve handling of UNIX signals
* More readable names for thread channels
* Reduce CPU usage to parse messages

1.16
* Can ignore yelling (@here and such) for entire channels

1.15
* Map slack threads to IRC channels
* Rewritten parser for slack messages

1.14
* Write "LINK" instead of the URL when slack labels a URL with another URL

1.13
* New /annoy command to annoy people, showing self as typing when they are.
* Make mypy happy

1.12
* Option to save long formatted text as .txt files
* Download history for direct messages too
* Unicode emoji!
* Improved diff
* Improved compatibility with IRC
* Able to prevent selected users from abusing general mentions

1.11
* Greatly reduced CPU usage
* Remove support for RocketChat.
  I have no way of testing it and it requires severe changes.
* Only tag users that are in the same channel
* Handle more exceptions with non existing users/channels or malformed commands
* Handle cursor over conversations list
* New setting to not join channels when autojoin is set
* Diff of edit shows the entire word being edited

1.10
* Do not insert mentions inside URLs
* Support /whois

1.9
* Chat history is held and injected when the IRC client is ready
* Remove attr dependency

1.8
* Chat and thread history is retrieved and injected
* Aware of new channels the user is added to
* Parse URLs sent from slack with a label
* Requires at least python3.8
* Improved documentation
* Improved logging
* Various crashes fixed
* Better handling of signals
* Can join slack channels without doing so from the app
* Support @everyone

1.7
* Logs are more useful
* Ship with systemd service to run instances from configuration files
* Support for xoxc tokens in slack

1.6